--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,4 @@
 <resources>
-    <string name="app_name">ProyectoIntegradoRaquelGutierrez</string>
+    <string name="app_name">Shake it!</string>
 
-    <string name="title_activity_shake">ShakeActivity</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
